[package]
name = "chat-deepseek"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
regex = "1.11.1"
reqwest = { version = "0.12.12", features =["json"] } 
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
tokio = { version = "1.43.0", features = ["full"] }